<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="108dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_logo"
            android:tint="@color/colorPrimary"
            android:layout_marginTop="64dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/fieldPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/hint_phone_number"
            android:layout_marginTop="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/textLogo"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="parent"/>

    <TextView
            android:id="@+id/textWarningMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/warning_message"
            android:textSize="12sp"
            android:textColor="#888"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
            android:id="@+id/fieldVerificationCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_verification_code"
            android:layout_marginTop="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogo"/>

    <Button
            android:id="@+id/buttonStartVerification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_verify"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="buttonStartVerificationClick"
            android:padding="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fieldPhoneNumber"/>

    <Button
            android:id="@+id/buttonResend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_resend"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="buttonResendClick"
            android:padding="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonVerifyPhone"
            app:layout_constraintTop_toBottomOf="@id/fieldVerificationCode"/>

    <Button
            android:id="@+id/buttonVerifyPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_verify"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="buttonVerifyPhoneClick"
            android:padding="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonResend"
            app:layout_constraintTop_toBottomOf="@id/fieldVerificationCode"/>

    <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="836dp"/>
</android.support.constraint.ConstraintLayout>